# WavePilot-SDR

./: .gitattributes  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: driver-setup.html  driver-setup.md  index.html  update.json
scripts/: build-icons.py  install-linux.sh  install-windows-dev-autosync.ps1  install-windows.ps1  start-linux.sh  start-windows.ps1  sync-dev-from-github.ps1  uninstall-windows-dev-autosync.ps1
wavepilot/: __init__.py  desktop.py  dsp.py  live_audio.py  presets.py  radio.py  server.py  transcript.py  updater.py
wavepilot/static/: app.js  index.html  styles.css
