[project]
name = "wavepilot-sdr"
version = "0.1.0"
description = "Local cross-platform RTL-SDR scanner and live listener"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.scripts]
wavepilot-sdr = "wavepilot.server:main"

[tool.setuptools]
packages = ["wavepilot"]

[tool.setuptools.package-data]
wavepilot = ["static/*"]
